# tmx-cpp-py

./: .appveyor.yml  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/: conda_build_config.yaml
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  tmx_cpp_py.rst
examples/: oled.py  oled_image.py  servo.py
src/: main.cpp
tests/: test_basic.py
