[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "ninja",
  "cmake>=3.12",
  # "boost"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
  '*.egg',
  '.*',
  '_darcs',
  'build',
  'CVS',
  'dist',
  'node_modules',
  'venv',
  '{arch}',
  'pybind11',
  'boost',
]
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  # "--ignore-glob=boost/**",
  # "--ignore-glob=pybind11/**",
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

# Disable free-threading builds on all platforms
skip = "cp3??t-*"

# Build using the manylinux_2_28 image
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"

# # Install system library
# [tool.cibuildwheel.linux]
# before-all = "dnf install -y boost-devel"

[tool.cibuildwheel.linux]
before-all = [
  # "cd /",
  # "mkdir boost",
  # "cd boost",
  # "wget --no-check-certificate 'https://archives.boost.io/release/1.74.0/source/boost_1_74_0.tar.bz2'",
  # "tar xf boost_1_74_0.tar.bz2",
  # "cd boost_1_74_0",
  # "./bootstrap.sh --without-libraries=python,mpi,graph,graph_parallel",
  # "./b2 install --without-python --without-mpi --without-graph --without-graph_parallel",
  # "cd {package}",
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"

inherit.before-all = "prepend"
before-all = ["dnf -y install boost1.78-devel"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"

inherit.before-all = "prepend"
before-all = ["apk add boost-dev"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
